Modify Codemagic workflow for release APK build
Updated the Codemagic workflow to build a release APK instead of a debug APK, including necessary environment variables for signing.

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,22 +1,20 @@
 workflows:
-  android-build:
-    name: Build Monad APK
+  android-release-build:
+    name: Build Monad Release APK
     max_build_duration: 60
     environment:
-      flutter: false
       vars:
-        ANDROID_KEYSTORE_BASE64: EncryptedKeystoreHere   # optional if you sign release
+        ANDROID_KEYSTORE_BASE64: EncryptedKeystoreHere   # Base64 of your keystore file
+        ANDROID_KEYSTORE_PASSWORD: YourKeystorePassword
+        ANDROID_KEY_ALIAS: YourKeyAlias
+        ANDROID_KEY_PASSWORD: YourKeyPassword
     scripts:
-      - name: Checkout repository
+      - name: Build release APK
         script: |
-          git clone https://github.com/Abenether160/Monad.git
-          cd Monad
-      - name: Build APK
-        script: |
-          cd Monad/app
-          ./gradlew assembleDebug
+          cd app
+          ./gradlew assembleRelease
     artifacts:
-      - app/build/outputs/apk/debug/app-debug.apk
+      - app/build/outputs/apk/release/app-release.apk
     publishing:
       email:
         recipients:
